<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kmb.navigationtest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_homeDialogFragment"
            app:destination="@id/homeDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.kmb.navigationtest.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_dashboardDetailFragment"
            app:destination="@id/dashboardDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.kmb.navigationtest.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_nestedGraphFragment"
            app:destination="@id/nested_navigation" />
    </fragment>
    <fragment
        android:id="@+id/dashboardDetailFragment"
        android:name="com.kmb.navigationtest.ui.dashboard.DashboardDetailFragment"
        android:label="@string/title_dashboard_detail"
        tools:layout="@layout/fragment_dashboard_detail" >
        <argument
            android:name="myArg"
            app:argType="integer"
            android:defaultValue="1000"/>
    </fragment>
    <dialog
        android:id="@+id/homeDialogFragment"
        android:name="com.kmb.navigationtest.ui.home.HomeDialogFragment"
        android:label="@string/title_home_dialog"
        tools:layout="@layout/fragment_home_dialog" />

    <navigation android:id="@+id/nested_navigation"
        app:startDestination="@id/nestedGraphFragment">
        <fragment
            android:id="@+id/nestedGraphFragment"
            android:name="com.kmb.navigationtest.ui.notifications.NestedGraphFragment"
            android:label="@string/title_nested_graph"
            tools:layout="@layout/fragment_nested_graph">
            <action
                android:id="@+id/action_nestedGraphFragment_to_nestedGraphFragment2"
                app:destination="@id/nestedGraphFragment2" />
        </fragment>
        <fragment
            android:id="@+id/nestedGraphFragment2"
            android:name="com.kmb.navigationtest.ui.notifications.NestedGraphFragment2"
            android:label="@string/title_nested_graph2"
            tools:layout="@layout/fragment_nested_graph2" />
    </navigation>

</navigation>